# Agora

./: .gitignore  README.md  main.py  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/app/api/v1/: create_agent.py
backend/app/controllers/: context.py
backend/app/core/: config.py  debate_agent.py
backend/app/db/: database.py
backend/app/models/: BaseUUIDmodel.py  __init__.py  agent_model.py  debate_model.py  user_model.py
backend/app/schemas/: agent_schema.py  baseUUIDschema.py  context_schema.py  debate_schema.py  user_schema.py
