[project]
name = "agora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.12.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]
